[tool.poetry]
name = "abt-python-testcase"
version = "0.1.0"
description = ""
authors = ["timosii <holdcarter@holdcarter.ru>"]
readme = "README.md"
packages = [{include = "abt_python_testcase"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
